# MeetBot

./: AGENTS.md
.opencode/agent/coder/: AGENT.md
.opencode/command/: prime.md
backend/: db_schema.md
backend/api_endpoints/: AGENTS.md  user_endpoints.md
backend/src/: database.py  main.py  pyproject.toml
backend/src/helpers/: jwt.py  password.py
backend/src/models/: schemas.py  user.py
backend/src/routes/: user.py
